--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
             </objects>
             <point key="canvasLocation" x="1643.5114503816794" y="3.5211267605633805"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Home-->
         <scene sceneID="r3G-MT-2pK">
             <objects>
                 <viewController id="vAd-1v-ztK" customClass="HomeViewController" customModule="MyArchive" customModuleProvider="target" sceneMemberID="viewController">
@@ -185,12 +185,49 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9rj-2x-8ra" customClass="StoryCell" customModule="MyArchive" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="209" id="9rj-2x-8ra" customClass="StoryCell" customModule="MyArchive" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="209"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9rj-2x-8ra" id="G8d-EA-7el">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="209"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="K71-na-J4R">
+                                                    <rect key="frame" x="0.0" y="11" width="377" height="179"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e1m-Is-kQj">
+                                                            <rect key="frame" x="0.0" y="0.0" width="115" height="179"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="115" id="Kaa-6O-Vmb"/>
+                                                                <constraint firstAttribute="height" constant="179" id="U82-Ky-eQN"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cdh-2D-bL8">
+                                                            <rect key="frame" x="123" y="0.0" width="254" height="54.666666666666664"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssl-bF-AzN">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="41" height="26.333333333333332"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFy-gD-Mu2">
+                                                                    <rect key="frame" x="0.0" y="34.333333333333336" width="87.333333333333329" height="20.333333333333336"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="K71-na-J4R" secondAttribute="trailing" constant="16" id="2vh-3K-9XS"/>
+                                                <constraint firstItem="K71-na-J4R" firstAttribute="top" secondItem="G8d-EA-7el" secondAttribute="top" constant="11" id="4V9-u5-80l"/>
+                                                <constraint firstItem="K71-na-J4R" firstAttribute="leading" secondItem="G8d-EA-7el" secondAttribute="leading" id="qVW-1a-vRi"/>
+                                                <constraint firstAttribute="bottom" secondItem="K71-na-J4R" secondAttribute="bottom" constant="19" id="vAb-qF-TeJ"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -205,7 +242,7 @@
                             <constraint firstItem="zLT-3T-nz1" firstAttribute="trailing" secondItem="uup-LK-90M" secondAttribute="trailing" id="W7e-FQ-i1W"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="BGJ-WJ-Wvl">
+                    <navigationItem key="navigationItem" title="Home" id="BGJ-WJ-Wvl">
                         <barButtonItem key="rightBarButtonItem" title="Logout" id="e5v-dn-p6i">
                             <connections>
                                 <action selector="onLogoutTapped:" destination="vAd-1v-ztK" id="mMh-e8-Xr2"/>
@@ -218,7 +255,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LP1-R9-zx4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="895" y="663"/>
+            <point key="canvasLocation" x="893.89312977099235" y="661.97183098591552"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="x2m-75-WZJ">
