--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -173,10 +173,10 @@
             </objects>
             <point key="canvasLocation" x="1643.5114503816794" y="3.5211267605633805"/>
         </scene>
-        <!--Home-->
+        <!--Home View Controller-->
         <scene sceneID="r3G-MT-2pK">
             <objects>
-                <viewController id="vAd-1v-ztK" customClass="HomeViewController" customModule="MyArchive" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vAd-1v-ztK" userLabel="Home View Controller" customClass="HomeViewController" customModule="MyArchive" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SBg-nF-Gr7">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
